# homelab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DUAL-STACK-MIGRATION.md  headlamp.yaml  homelab-design-document.md
.github/workflows/: opnsense-operator.yml
agents/metallb/: README.md
agents/operator/: CLAUDE.md  homelab-design-document.md
agents/operator/references/: cert-manager.md  cilium.md  metallb.md  monitoring.md  opnsense-operator.md  platform.md  seaweedfs.md  topolvm.md
agents/platform/: Chart.yaml  README.md  gen-kubeconfig.sh  values.yaml
agents/platform/templates/config/: image-allowlist.yaml  runtime-profiles.yaml
agents/platform/templates/constraints/: allowed-kinds-app.yaml  allowed-kinds-tool.yaml  deployment-only.yaml  harden-defaults.yaml  image-allowlist.yaml  protect-constraints.yaml  runtime-label.yaml  runtime-ranges.yaml  tool-single-release.yaml
agents/platform/templates/governance/: namespace-governance.yaml  namespace-metadata.yaml
agents/platform/templates/operator/: clusterrole-deploy.yaml  clusterrole.yaml  config-reader.yaml  namespace.yaml  serviceaccount.yaml
cert-manager/: Chart.yaml  README.md  values.yaml
cert-manager/templates/: clusterissuer.yaml  secret.yaml
cilium/: Chart.yaml  README.md  gen-wireguard-client.sh  values.yaml
cilium/templates/: east-west-baseline-allow.yaml  east-west-default-deny.yaml  gateway-ingress-policy.yaml  gateway.yaml  host-firewall.yaml  hubble-ui-route.yaml  loadbalancer.yaml  wireguard.yaml
hypha/: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md
hypha/.claude/: settings.local.json
hypha/hypha/: Cargo.toml
hypha/hypha-core/: Cargo.toml
hypha/hypha-core/src/: backend.rs  config.rs  error.rs  lib.rs  meta.rs
hypha/hypha-format/: Cargo.toml
hypha/hypha-format/benches/: throughput.rs
hypha/hypha-format/src/: envelope.rs  footer.rs  lib.rs  offset.rs  stream.rs  trailer.rs
hypha/hypha-format/tests/: roundtrip.proptest-regressions  roundtrip.rs  streaming_ctlen.rs
hypha/hypha/src/: auth.rs  codec.rs  keylocks.rs  lib.rs  main.rs  tier.rs
hypha/hypha/src/s3/: buckets.rs  delete.rs  get.rs  list_head.rs  mod.rs  multipart.rs  put.rs
hypha/hypha/tests/: conformance.rs  fuzz.rs  load.rs  multipart.rs
hypha/hypha/tests/common/: mod.rs
hypha/scripts/: s3s-e2e.sh
kube-node/: 10-provision.start  20-bootstrap-compute-spot.start  20-bootstrap-compute.start  20-bootstrap-db.start  20-bootstrap-server.start  build.sh  inner-build.sh  mkimg.k3s-compute-spot.sh  mkimg.k3s-compute.sh  mkimg.k3s-db.sh  mkimg.k3s-server.sh  nodes.md
kube-node/overlays/k3s-compute-spot/etc/: node-role
kube-node/overlays/k3s-compute/root/: answerfile
kube-node/overlays/k3s-db/root/: answerfile
kube-node/overlays/k3s-server/root/: answerfile
metallb/: Chart.yaml  values.yaml
metallb/templates/: pool.yaml
monitoring/: Chart.yaml  README.md  values.yaml
monitoring/templates/: grafana-route.yaml  prometheus-route.yaml
opnsense-operator/: .dockerignore  DESIGN.md  Dockerfile  Makefile  README.md  go.mod  go.sum
opnsense-operator/chart/: Chart.yaml  values.yaml
opnsense-operator/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
opnsense-operator/cmd/manager/: main.go
opnsense-operator/internal/config/: config.go
opnsense-operator/internal/controller/: gateway_controller.go  reconcile.go  service_controller.go  source.go  source_test.go
opnsense-operator/internal/opnsense/: client.go  client_test.go  dns.go  model.go  model_test.go  nat.go
platform/: Chart.yaml  README.md  install-crds.sh  values.yaml
platform/templates/: _helpers.tpl
platform/templates/constraints/: allowed-kinds-app.yaml  deployment-only.yaml  harden-defaults.yaml  operator-no-network-topology.yaml  operator-no-service-exposure.yaml  restrict-operator-namespaces.yaml  runtime-label.yaml  runtime-ranges.yaml  tool-single-release.yaml
platform/templates/governance/: namespace-default-ingress.yaml  namespace-governance.yaml  namespace-psa.yaml
platform/templates/operator/: clusterrole-deploy.yaml  clusterrole.yaml  clusterrolebinding.yaml
platform/templates/rbac/: kyverno-rolebinding-manager.yaml  kyverno-secrets-reader.yaml
platform/tests/: .gitignore  run.sh
platform/tests/constraints/allowed-kinds-app/: kyverno-test.yaml  resources.yaml
platform/tests/constraints/allowed-kinds-tool/: resources.yaml
seaweedfs/: Chart.yaml  README.md  values.yaml
seaweedfs/templates/: access-grants.yaml  gateway-routes.yaml  master-ui-route.yaml
topolvm/: Chart.yaml  README.md  values.yaml
utils/: gvisor-runtime.yaml  gvisor.sh
(+27 files in other folders)
