[package]
name = "hypha-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypha-format = { workspace = true }
aws-sdk-s3 = { workspace = true }
s3s = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
