[package]
name = "hypha-format"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
age = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
criterion = "0.8.2"

[dev-dependencies]
proptest = { workspace = true }

[[bench]]
name = "throughput"
harness = false
