[package]
name = "hypha"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "hypha"
path = "src/lib.rs"

[[bin]]
name = "hypha"
path = "src/main.rs"

[dependencies]
hypha-core = { workspace = true }
hypha-format = { workspace = true }
anyhow = { workspace = true }
s3s = { workspace = true }
s3s-aws = { workspace = true }
aws-sdk-s3 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
age = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# Integration harness (tests/): spawn MinIO as both the cache and the remote backend, drive hypha
# in-process over an ephemeral port with a real S3 client. Stateless — every fixture cleans up on
# drop.
proptest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
